--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "chatter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.16.1",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.1",
-    "express-session": "^1.15.1",
-    "mongodb": "^2.2.24"
-  }
+    "name": "chatter",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": "https://github.com/crostonj/Chatter.git",
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.16.1",
+        "cookie-parser": "^1.4.3",
+        "ejs": "^2.5.6",
+        "express": "^4.14.1",
+        "express-session": "^1.15.1",
+        "mongodb": "^2.2.24"
+    }
 }
